[package]  # help on keys doc.rust-lang.org/cargo/reference/manifest.html
name   	= "parser_helper"
version	= "0.1.0"
authors	= ["{{authors}}"]
edition	= "2021"
license	= "MIT"
build  	= "build.rs"

[workspace]
members = ["./","helper","helper_proc","xtask","keymodi","keymodi_data","keymodi_proc"]	# relative to the workspace root

[[bin]]
name	= "parser_helper_bin"
path	= "src/parser_helper.bin.rs"

[lib]
name      	= "parser_helper_lib"
path      	= "src/parser_helper.lib.rs"
crate-type	= ['lib','cdylib']

[dependencies]
helper        	= {path="helper"}
helper_proc   	= {path="helper_proc"}
keymodi       	= {path="keymodi"}
keymodi_data  	= {path="keymodi_data"}
keymodi_proc  	= {path="keymodi_proc"}
log           	= "0.4"
stderrlog     	= "0.5"
anyhow        	= "1.0"
faccess       	= "0.2"
#             	# parse
bpaf          	= {version="0.9.15", features=["autocomplete","bright-color"]}
quick-xml     	= {version="0.36.2", features=["serialize"]}
serde         	= {version="1.0.210", features=["derive"]}
serde-aux     	= "4.5.0"
kdl           	= "4.6.0"
#             	# unicode
unicode_names2	= "1.3.0"
charname      	= "1.15.1"
icu_properties	= "1.5.1"
#             	# string
heck          	= "0.5.0"
#             	# misc
phf           	= {version="0.11.2", features=["macros"]} # generate Rust source for PHF data structures at compile time
bitflags = "2.6.0"
const_format = "0.2.33"

[build-dependencies]
log	= "0.4"

[profile.release]
# opt        	for      	size
strip        	= true   	# Auto strip symbols from the binary (included by default on Linux/macOS)
opt-level    	= 3      	# |3|     s=size, z=size+
lto          	= true   	# |false| Sets link-time optimization.
codegen-units	= 1      	# |16|    reduce parallel code generation
panic        	= "abort"	# |unwind| save ~20k w/o drop-on-panic cleanup and std::panic::catch_unwind

# Overrides doc.rust-lang.org/nightly/cargo/reference/profiles.html#overrides
[profile.dev.package."*"] # panic/lto/rpath can't be overridden
opt-level	= 3 	# build dependencies in release mode to make the main app faster
[profile.dev.build-override]
opt-level	= 3	# build scripts and proc-macros in release mode to make them faster

[lint.rust]
non_snake_case        	= "allow"
non_upper_case_globals	= "allow"
non_camel_case_types  	= "allow"
