[package]
name       	= "keymodi"
version    	= "0.1.0"
description	= "Keyboard modifier keys as bitflags with helper parsers"
authors    	= ["{{authors}}"]
edition    	= "2021"
license    	= "MIT"
build      	= "build.rs"

[lib]
name	= "keymodi"
path	= "src/keymodi.lib.rs"

[build-dependencies]
helperes     	= {git="https://github.com/eugenesvk/helperes.git"     , tag="0.1.1"}
helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git", tag="0.2.0"}
keymodi_data 	= {path="../keymodi_data"}
phf          	= {version="0.11.1",default-features=false} # generate Rust source for PHF data structures at compile time
phf_codegen  	= "0.11.1"
indexmap     	= "2.0.0"

[dependencies]
helperes     	= {git="https://github.com/eugenesvk/helperes.git"     , tag="0.1.1"}
helperes_proc	= {git="https://github.com/eugenesvk/helperes-proc.git", tag="0.2.0"}
keymodi_data	= {path="../keymodi_data"}
bitflags    	= "2.3.3"
indexmap    	= "2.0.0"
phf         	= {version="0.11",features=["macros"]}
